docs: update CONTRIBUTING.md